demo-app/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "faith360-uat"
  labels:
    name: "faith360-uat"
