demo-app/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: announcement
  name: announcement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: announcement
  template:
    metadata:
      labels:
        app: announcement
    spec:
      containers:
      - name: announcement
        image: dockerImage:imageTag
        imagePullPolicy: Always
        resources:
          requests:
            memory: "50Mi"
            cpu: "5m"
          limits:
            memory: "200Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
          name: announcement
