demo-app/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: announcement
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "enctype,Authorization,Content-Type,LanguageKey,Platform,CorrelationId"
spec:
#  ingressClassName: nginx
  rules:
  - host: uat.faith360.co.in
    http:
      paths:
      - path: /ancmntsvc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: announcement
            port:
              number: 80
